commit didn't work

--- a/_Rmd/ST_558_Project_2.Rmd
+++ b/_Rmd/ST_558_Project_2.Rmd
@@ -451,9 +451,9 @@ params = lapply(data_channel_is, FUN = function(x){list(DataChannel = x)})
 #put into a data frame
 reports <- tibble(output_file, params)
 
-## renders with params to all 
+## renders with params to all based on rows in reports
 apply(reports, MARGIN=1, FUN = function(x){
-  
+## change output_dir to whatever folder you want it to output to   
 rmarkdown::render('C:/Documents/Github/ST_558_Project_2/_Rmd/Automation_test.Rmd', output_dir = "./automations_test_html", output_file = x[[1]], params = x[[2]]
     )
   }
